--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task_week1",
+  "name": "task_week1_with_modal",
   "version": "1.0.0",
   "description": "focus on back end programming",
   "main": "index.js",
@@ -17,10 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
-    "sequelize": "^4.44.0"
+    "sequelize": "^5.8.11"
   },
   "devDependencies": {}
 }
